--- a/index.html
+++ b/index.html
@@ -16,222 +16,53 @@
         <title>Renee Home 2024</title>
     </head>
     <body>
-        
-        <nav class="navbar navbar-expand-md navbar-light fixed-top my-navbar-bg">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="#">
-                    <img src="images/cat.png" height="30" alt="cat image">
-                    <span class="my-navbar-title">Renee CL  Chen</span>
-                </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarCollapse">
-                    <ul class="navbar-nav me-auto mb-2 mb-md-0">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Link</a>
-                        </li>
-                    </ul>
-                    <form class="d-flex" role="search">
-                        <input class="my-form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                        <button class="btn my-btn-outline-success" type="submit">Search</button>
-                    </form>
-                </div>
-            </div>
-        </nav>
-
         <main>
-            <div class="home-image">
-                <img src="images/homeImage.png" alt="home image">
-            </div>
             <div class="container">
-                <div class="row g-2">
+                <div class="row">
                     <div class="col-12">
-                            <div class="section pt-5">
-                                <h2>簡介</h2>
-                                <div class ="flex-container">
-                                    <p>我是一個充滿好奇心的人，總是在想著「怎麼做會更好」。</p>
-                                    <p>學習與研究是我每天的生活。自2007年起至今，我從動畫製作出發、之後轉向程式遊戲、後來成為資深遊戲工程師、再到目前轉向網頁開發，都是不斷的學習帶來的成長與改變。</p>
-                                    <p>在個人興趣方面也有所追求，從公路車運動入門後，我改練更加以技術為主的羽球。同時，我用心練習吉他、學習樂理，在一天一天對羽球技術、吉他演奏與樂理知識有更加的熟練與更多的認識的過程中，得到成就與滿足。</p>
-                                </div> 
+                            <div class="profile section">
+                                <img class="center-block" src="images/me.jpg" alt="my profile photo">
+                                <h1>Hello!</h1>
+                                <p class="text center-block text-center">我是Renee，一位前端工程師。從動畫製作出發、之後成為資深遊戲工程師、目前轉向網頁開發。我喜歡跟狗狗玩、喜歡運動，特別是羽球、喜歡吉他與樂理。</p>
                             </div>
                     </div>
-                        <div class="col-12 col-md-6 col-xl-5">
-                            <div class="section">
-                                <h2>學歷</h2>
-                                <div class="row">
-                                    <div class="col-12 col-sm-6 col-md-12">
-                                        <p class="list-topic">Master of Fine Arts</p>
-                                        <ul>
-                                            <li>俄亥俄州立大學</li>
-                                            <li>主修：動畫與互動媒體</li>
-                                            <li>2012/8-2016/5 </li>
-                                            <li>Columbus, Ohio, U.S.</li>
-                                        </ul>
-                                    </div>
-                                    <div class="col-12 col-sm-6 col-md-12">
-                                        <p class="list-topic">Bachelor of Science</p>
-                                        <ul>
-                                            <li>龍華科技大學</li>
-                                            <li>主修：多媒體與遊戲發展科學</li>
-                                            <li>輔修：應用外語</li>
-                                            <li>2007/9-2011/6</li>
-                                            <li>桃園縣龜山鄉</li>
-                                        </ul>
-                                    </div>
-                                </div>
-                            </div>
+                    <div class="col-12">
+                        <div class="experience section">
+                            <h2>資歷</h2>
+                            <ul class="center-block" style="width: fit-content"">    
+                                <li>俄亥俄州立大學．動畫與互動媒體碩士</li>
+                                <li>台灣碩網．客戶端工程師</li>
+                                <li>志合訊息．資深工程師</li>
+                                <li>宏達電．資深工程師</li>
+                                <li>Ohio Supercomputer Center．研究員</li>
+                                <li>Advanced Computing Center for the Arts and Design．研究員</li>
+                            </ul>
                         </div>
-                        <div class="col-12 col-md-6 col-xl-7">
-                            <div class="section">
-                            <h2>工作資歷</h2>
-                            <div class="row">
-                                <div class="col-12">
-                                    <p class="list-topic">台灣碩網</p>
-                                    <ul>
-                                        <li>客戶端工程師</li>
-                                        <li>2022/9-2024/5．1年9個月</li>
-                                        <li>台北市南港區</li>
-                                    </ul>
-                                </div>
-                                <div class="col-12">
-                                    <p class="list-topic">志合訊息</p>
-                                    <ul>
-                                        <li>資深工程師</li>
-                                        <li>2021/4-2022/9．1年6個月</li>
-                                        <li>台北市內湖區
-                                    </ul>
-                                </div>
-                                <div class="col-12">
-                                    <p class="list-topic">美商安思特</p>
-                                    <ul>
-                                        <li>技術文編</li>
-                                        <li>2010/10-2021/1．4個月</li>
-                                        <li>台北市中和區</li>
-                                    </ul>
-                                </div>
-                                <div class="col-12">
-                                    <p class="list-topic">宏達電</p>
-                                    <ul>
-                                        <li>資深工程師</li>
-                                        <li>2017/8-2020/8．3年</li>
-                                        <li>台北市新店區</li>
-                                    </ul>
-                                </div>
-                                <div class="col-12">
-                                    <p class="list-topic">Ohio Supercomputer Center</p>
-                                    <ul>
-                                        <li>Graduate Research Associate</li>
-                                        <li>2014/1-2017/3．3年3個月</li>
-                                        <li>Columbus, Ohio, U.S.</li>
-                                    </ul>
-                                </div>
-                                <div class="col-12">
-                                    <p class="list-topic">Advanced Computing Center for the Arts and Design</p>
-                                    <ul>
-                                        <li>Graduate Research Associate</li>
-                                        <li>2013/1-2013/12．1年</li>
-                                        <li>Columbus, Ohio, U.S.</li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>       
-                    </div>
-                    
-                    <div class="col-12 col-md-6 col-xl-5">
-                        <div class="section">
+                    </div>       
+                    <div class="cols-12">
+                        <div class="section expertise">
                             <h2>專長</h2>
                             <div class="row">
-                                <div class="col-12 col-sm-6 col-md-12">
-                                    <p class="list-topic">網頁開發</p>
-                                    <ul>
-                                        <li>Javascirpt</li>
-                                        <li>HTML</li>
-                                        <li>CSS</li>
-                                        <li>Bootstrap Framework</li>
-                                    </ul>
-                                </div>
-                                <div class="col-12 col-sm-6 col-md-12">
-                                    <p class="list-topic">遊戲開發</p>
-                                    <ul>
-                                        <li>C#</li>
-                                        <li>Unity</li>
-                                        <li>Shader與編緝器編寫</li>
-                                        <li>VR、XR遊戲製作</li>
-                                        <li>Json表單串接</li>
-                                        <li>Bundle管理與下載</li>
-                                        <li>商城金流串接</li>
-                                        <li>製作角色養成、戰鬥技能、新手教學等遊戲系統</li>
-                                        <li>Jenkins自動化流程編輯串接</li>
-                                        <li>Play Store、App Store包版上架</li>
-                                    </ul>
+                                <div class="col-12">
+                                        <div class="row gy-5 gx-5 mx-auto" style="max-width: 600px">
+                                            <div class="col-3">
+                                                <img class="expertice-image center-block border-round " height="80px" src="images/web-icon.svg" alt="web icon">
+                                            </div>
+                                            <div class="col-9">
+                                                <p class="list-topic">網頁開發</p>
+                                                <p class="text">我對網頁開發很感興趣，偶爾會寫寫個人網站。遊戲工程師的底子對自學網頁前端相當有幫助，已自學了HTML、CSS、Bootstrap Framework、Javascirpt。我期望自己能夠對網頁開發越來越熟悉、在日後以網頁開發為主要專長。</p>
+                                            </div>
+                                            <div class="col-3">
+                                                <img class="expertice-image center-block border-round" height="80px" src="images/game-icon.svg" alt="web icon">
+                                            </div>
+                                            <div class="col-9">
+                                                <p class="list-topic">遊戲開發</p>
+                                                <p class="text">我曾任VR與手遊工程師，有多年的遊戲製作經驗。主要使用Unity與C#。曾製作角色養成、新手教學、Bundle的管理與下載、金流、戰鬥等前端系統、也曾負責包版與熱更新流程。除了前端各式各樣的系統與前後端串接之外，因為動畫背景的關係，我對寫Shader與美術編輯器的製作亦相當熟悉。</p>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                    </div>
-                    <div class="col-12 col-md-6 col-xl-7">
-                        <div class="section">
-                            <h2>其它</h2>
-                            <div class="row">
-                                <div class="col-12 col-sm-6 col-md-12 col-lg-6">
-                                    <p class="list-topic">3D動畫</p>
-                                    <ul>
-                                        <li>素描、插畫、分鏡</li>
-                                        <li>基本設計</li>
-                                        <li>建模、貼圖、骨架、動畫</li>
-                                            <ul>
-                                                <li>Photoshop、Gimp</li>
-                                                <li>Maya、3Ds Max</li>
-                                            </ul>
-                                        </li>
-                                        <li>
-                                            <p class="list-topic">後製與剪輯</p>
-                                            <ul>
-                                                <li>Premiere</li>
-                                                <li>AfterEffects</li>
-                                            </ul>
-                                        </li>
-                                    </ul>
-                                </div>  
-                                <div class="col-12 col-sm-6 col-md-12 col-lg-6">
-                                    <p class="list-topic">技術文件編寫</p>
-                                    <ul>
-                                        <li>Sphinx</li>
-                                    </ul>
-                                    <p class="list-topic">版本控管</p>
-                                    <ul>
-                                        <li>Git</li>
-                                        <li>Sourcetree</li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-12 col-md-7 col-lg-6 col-xl-4 order-1">
-                        <div class="section">
-                            <h2>語言</h2>
-                            <p class="list-topic">中文</p>
-                            <ul>
-                                <li>母語</li>
-                            </ul>
-                            <p class="list-topic">英文</p>
-                            <ul>
-                                <li>大學輔系為應用外語系</li>
-                                <li>留美5年</li>
-                                <li>雅思8分</li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="col-12 col-md-5 col-lg-6 col-xl-4 order-1">
-                        <div class="section">
-                            <h2>興趣</h2>
-                            <p class="list-topic">狗狗</p>
-                            <p class="list-topic">吉他表演、樂理</p>
-                            <p class="list-topic">運動、羽球</p>
-                            </ul>
                         </div>
                     </div>
                     <div class="col-12">
@@ -291,11 +122,16 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-12 col-xl-4 order-1">
-                        <div class="section">
+                    <div class="col-12">
+                        <div class="section contact">
                             <h2>聯絡我</h2>
-                            <img src="envelope.svg" width="16" height="16" alt="email icon">
+                            <p class="mx-auto text-center" style="max-width: 600px">您是貓派還是狗派？您也喜歡音樂和運動嗎？
+                               我們可以在工作之餘討論一下！</p>
+                            <a class="btn center-block" style="width: fit-content" href="mailto:chen.3140@osu.edu">
+
+                                <img src="envelope.svg" width="16" height="16" alt="email icon">
                                 chen.3140@osu.edu
+                            </a>
                         </div>
                     </div>
                 </div>
