--- a/index.html
+++ b/index.html
@@ -8,23 +8,36 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=LXGW+WenKai+TC&display=swap" rel="stylesheet">
       
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Playwrite+AU+VIC:wght@100..400&family=Playwrite+US+Trad:wght@100..400&display=swap" rel="stylesheet">
+
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <link rel="stylesheet" href="index.css">
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
       
         <title>Renee Home 2024</title>
-    </head>
     <body>
         <main>
+            <div class="home container-fluid">
+                <div style="position:relative">
+                    <img style="height: 120px; position: absolute; left: 15%; top: 30px"  src="images/cloud.svg" alt="cloud-image">
+                    <img style="height: 90px; position: absolute; right: 15%; top: 280px"  src="images/cloud.svg" alt="cloud-image">
+                    <img style="height: 150px; position: absolute; left: 15%; top: 426px"  src="images/dog.svg" alt="dog-image">
+                    <div class="center-block text-center" style=" padding-top: 190px;">
+                        <p style="font-size: 30pt; font-family: Playwrite US Trad;">I'm Renee.</p>
+                    </div>
+                </div>
+            </div>
             <div class="container">
                 <div class="row">
                     <div class="col-12">
-                            <div class="profile section">
-                                <img class="center-block" src="images/me.jpg" alt="my profile photo">
-                                <h1>Hello!</h1>
-                                <p class="text center-block text-center">我是Renee，一位前端工程師。從動畫製作出發、之後成為資深遊戲工程師、目前轉向網頁開發。我喜歡跟狗狗玩、喜歡運動，特別是羽球、喜歡吉他與樂理。</p>
-                            </div>
+                        <div class="profile section">
+                            <img class="center-block" src="images/me.jpg" alt="my profile photo">
+                            <h1>Hello!</h1>
+                            <p class="text center-block text-center">我是Renee，一位前端工程師。從動畫製作出發、之後成為資深遊戲工程師、目前轉向網頁開發。我喜歡跟狗狗玩、喜歡運動，特別是羽球、喜歡吉他與樂理。</p>
+                        </div>
                     </div>
                     <div class="col-12">
                         <div class="experience section">
@@ -45,17 +58,17 @@
                             <div class="row">
                                 <div class="col-12">
                                         <div class="row gy-5 gx-5 mx-auto" style="max-width: 600px">
-                                            <div class="col-3">
-                                                <img class="expertice-image center-block border-round " height="80px" src="images/web-icon.svg" alt="web icon">
+                                            <div class="col-md-3">
+                                                <img class="center-block" height="80px" src="images/web-icon.svg" alt="web icon">
                                             </div>
-                                            <div class="col-9">
+                                            <div class="col-md-9">
                                                 <p class="list-topic">網頁開發</p>
                                                 <p class="text">我對網頁開發很感興趣，偶爾會寫寫個人網站。遊戲工程師的底子對自學網頁前端相當有幫助，已自學了HTML、CSS、Bootstrap Framework、Javascirpt。我期望自己能夠對網頁開發越來越熟悉、在日後以網頁開發為主要專長。</p>
                                             </div>
-                                            <div class="col-3">
-                                                <img class="expertice-image center-block border-round" height="80px" src="images/game-icon.svg" alt="web icon">
+                                            <div class="col-md-3">
+                                                <img class="center-block" height="80px" src="images/game-icon.svg" alt="web icon">
                                             </div>
-                                            <div class="col-9">
+                                            <div class="col-md-9">
                                                 <p class="list-topic">遊戲開發</p>
                                                 <p class="text">我曾任VR與手遊工程師，有多年的遊戲製作經驗。主要使用Unity與C#。曾製作角色養成、新手教學、Bundle的管理與下載、金流、戰鬥等前端系統、也曾負責包版與熱更新流程。除了前端各式各樣的系統與前後端串接之外，因為動畫背景的關係，我對寫Shader與美術編輯器的製作亦相當熟悉。</p>
                                             </div>
@@ -66,10 +79,10 @@
                         </div>
                     </div>
                     <div class="col-12">
-                        <div class="section">
+                        <div class="work section">
                             <h2>作品</h2>
                             <div class="row gx-2 gy-2">
-                                <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12 order-5">
+                                <div class="col-lg-6 col-sm-12 order-5">
                                     <div class="card">
                                         <img src="images/homeHealthcare.jpg" class="card-img-top" alt="image of the whiizu project">
                                         <div class="card-body">
@@ -79,7 +92,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12 order-4">
+                                <div class="col-lg-6 col-sm-12 order-4">
                                     <div class="card">
                                         <img src="images/sranipal.jpg" class="card-img-top" alt="image of the sranipal project">
                                         <div class="card-body">
@@ -89,7 +102,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12 order-3">
+                                <div class="col-lg-6 col-sm-12 order-3">
                                     <div class="card">
                                         <img src="images/srworks.jpg" class="card-img-top" alt="image of the srworks project">
                                         <div class="card-body">
@@ -99,7 +112,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12 order-2">
+                                <div class="col-lg-6 col-sm-12 order-2">
                                     <div class="card">
                                         <img src="images/whiizu.jpg" class="card-img-top" alt="image of the whiizu project">
                                         <div class="card-body">
@@ -109,7 +122,7 @@
                                     </div>
                                 </div>
                                 </div>
-                                <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12 order-1">
+                                <div class="col-lg-6 col-sm-12 order-1">
                                     <div class="card">
                                         <img src="images/sma.jpg" class="card-img-top" alt="image of the whiizu project">
                                         <div class="card-body">
@@ -125,11 +138,11 @@
                     <div class="col-12">
                         <div class="section contact">
                             <h2>聯絡我</h2>
-                            <p class="mx-auto text-center" style="max-width: 600px">您是貓派還是狗派？您也喜歡音樂和運動嗎？
-                               我們可以在工作之餘討論一下！</p>
+                            <p class="center-block text text-center">您是貓派還是狗派？您也喜歡音樂和運動嗎？<br />
+                               我們可以在工作之餘討論一下！
+                            </p>
                             <a class="btn center-block" style="width: fit-content" href="mailto:chen.3140@osu.edu">
-
-                                <img src="envelope.svg" width="16" height="16" alt="email icon">
+                                <img src="images/envelope.svg" width="16" height="16" alt="email icon">
                                 chen.3140@osu.edu
                             </a>
                         </div>
@@ -139,7 +152,10 @@
         </main>
     </body>
     <footer>
-        <img src="images/cat.png" height="20" alt="cat image">
-        © Renee CL Chen 2024
+        <p>Linkedin</p>
+        <p>
+            <img src="images/cat.png" height="20" alt="cat image">
+            © Renee CL Chen 2024
+        </p>
     </footer>
 </html>
