--- a/index.html
+++ b/index.html
@@ -23,10 +23,11 @@
             <div class="home container-fluid">
                 <div style="position:relative">
                     <img style="height: 120px; position: absolute; left: 15%; top: 30px"  src="images/cloud.svg" alt="cloud-image">
-                    <img style="height: 90px; position: absolute; right: 15%; top: 280px"  src="images/cloud.svg" alt="cloud-image">
+                    <img style="height: 90px; position: absolute; right: 15%; top: 325px"  src="images/cloud.svg" alt="cloud-image">
                     <img style="height: 150px; position: absolute; left: 15%; top: 426px"  src="images/dog.svg" alt="dog-image">
                     <div class="center-block text-center" style=" padding-top: 190px;">
                         <p style="font-size: 30pt; font-family: Playwrite US Trad;">I'm Renee.</p>
+                        <p class="class" style="font-size: 20pt;">a coder.</p>
                     </div>
                 </div>
             </div>
@@ -152,10 +153,7 @@
         </main>
     </body>
     <footer>
-        <p>Linkedin</p>
-        <p>
             <img src="images/cat.png" height="20" alt="cat image">
             © Renee CL Chen 2024
-        </p>
     </footer>
 </html>
