--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                             <h2>專長</h2>
                             <div class="row">
                                 <div class="col-12">
-                                        <div class="row gy-5 gx-5 mx-auto" style="max-width: 600px">
+                                        <div class="row gy-5 gx-lg-5 mx-auto" style="max-width: 600px">
                                             <div class="col-md-3">
                                                 <img class="center-block" height="80px" src="images/web-icon.svg" alt="web icon">
                                             </div>
