--- a/index.html
+++ b/index.html
@@ -20,16 +20,20 @@
         <title>Renee Home 2024</title>
     <body>
         <main>
-            <div class="home container-fluid">
-                <div style="position:relative">
-                    <img style="height: 120px; position: absolute; left: 15%; top: 30px"  src="images/cloud.svg" alt="cloud-image">
-                    <img style="height: 90px; position: absolute; right: 15%; top: 325px"  src="images/cloud.svg" alt="cloud-image">
-                    <img style="height: 150px; position: absolute; left: 15%; top: 426px"  src="images/dog.svg" alt="dog-image">
-                    <div class="center-block text-center" style=" padding-top: 190px;">
-                        <p style="font-size: 30pt; font-family: Playwrite US Trad;">I'm Renee.</p>
-                        <p class="class" style="font-size: 20pt;">a coder.</p>
-                    </div>
+            <div class="home1">
+                <img style="height: 120px; position: absolute; left: 15%; top: 30px" src="images/cloud.svg" alt="cloud-image">
+                <img style="height: 90px; position: absolute; right: 15%; top: 325px" src="images/cloud.svg" alt="cloud-image">
+                <div class="center-block text-center" style="padding-top:190px">
+                    <p style="font-size: 30pt; font-family: Playwrite US Trad;">I'm Renee.</p>
+                    <p style="font-size: 20pt;">a coder.</p>
                 </div>
+            </div>
+            <div class=" home2 d-flex" style="width: 100%; height: 100%;">
+             <div class="col-4 align-self-end text-end">
+                <img style="height: 150px;" src="images/dog.svg" alt="dog-image">
+             </div>
+            </div>
+           
             </div>
             <div class="container">
                 <div class="row">
@@ -88,7 +92,7 @@
                                         <img src="images/homeHealthcare.jpg" class="card-img-top" alt="image of the whiizu project">
                                         <div class="card-body">
                                             <h5 class="card-title">The Home Healthcare Project (2014-2017)</h5>
-                                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                            <p class="card-text">與學校護理系合作的居家安全訓練遊戲。我負責所有的建模和部份的程式。</p>
                                             <a href="hhttps://vimeo.com/203766617" class="btn btn-primary">Go somewhere</a>
                                         </div>
                                     </div>
@@ -98,7 +102,7 @@
                                         <img src="images/sranipal.jpg" class="card-img-top" alt="image of the sranipal project">
                                         <div class="card-body">
                                             <h5 class="card-title">SRanipal (2017-2020)</h5>
-                                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                            <p class="card-text">Vive Pro的AI臉部表情識別工具，我為這個工具寫了Demo。</p>
                                             <a href="https://www.youtube.com/watch?v=w7qciYfmbFA" class="btn btn-primary">Go somewhere</a>
                                         </div>
                                     </div>
@@ -108,7 +112,7 @@
                                         <img src="images/srworks.jpg" class="card-img-top" alt="image of the srworks project">
                                         <div class="card-body">
                                         <h5 class="card-title">SRWorks (2017-2020)</h5>
-                                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                        <p class="card-text">Vive Pro的AI深度與場景物件識別工具，我為這個工具寫了Demo。</p>
                                         <a href="https://www.youtube.com/watch?v=ICEegHQcZlc&t=118s" class="btn btn-primary">Go somewhere</a>
                                         </div>
                                     </div>
@@ -118,7 +122,7 @@
                                         <img src="images/whiizu.jpg" class="card-img-top" alt="image of the whiizu project">
                                         <div class="card-body">
                                         <h5 class="card-title">WhiizU (2021-2022)</h5>
-                                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                        <p class="card-text">健身車遊戲，我負責Shader的編寫、與Shader相關美術編輯器，偶爾支援前端介面的製作。</p>
                                         <a href="https://www.youtube.com/watch?v=N7G_WVXvw9M&t=1s" class="btn btn-primary">Go somewhere</a>
                                     </div>
                                 </div>
@@ -128,7 +132,7 @@
                                         <img src="images/sma.jpg" class="card-img-top" alt="image of the whiizu project">
                                         <div class="card-body">
                                         <h5 class="card-title">絢花百兵帖 (2022-2024)</h5>
-                                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                        <p class="card-text">我第一次參與商業手遊專案。大多都在刻前端。我處理過商城金流、Bundle下載、戰鬥系統、包版上架的工作。</p>
                                         <a href="https://www.youtube.com/watch?v=ENKU4W9-2ik" class="btn btn-primary">Go somewhere</a>
                                         </div>
                                     </div>
