--- a/index.html
+++ b/index.html
@@ -28,12 +28,17 @@
                     <p style="font-size: 20pt;">a coder.</p>
                 </div>
             </div>
-            <div class=" home2 d-flex" style="width: 100%; height: 100%;">
-             <div class="col-4 align-self-end text-end">
+            <div class="home2 align-items-end d-flex">
+             <div class="col-4 text-end">
                 <img style="height: 150px;" src="images/dog.svg" alt="dog-image">
              </div>
+             <div class="col-5 text-end">
+                <img style="height: 50px;" src="images/grass.svg" alt="dog-image">
+             </div>
             </div>
-           
+            <div class="home3" 
+                dfadf
+               </div>
             </div>
             <div class="container">
                 <div class="row">
