--- a/index.html
+++ b/index.html
@@ -22,24 +22,23 @@
         <main>
             <div class="home1">
                 <img style="height: 120px; position: absolute; left: 15%; top: 30px" src="images/cloud.svg" alt="cloud-image">
-                <img style="height: 90px; position: absolute; right: 15%; top: 325px" src="images/cloud.svg" alt="cloud-image">
+                <img style="height: 90px; position: absolute; right: 15%; top: 270px" src="images/cloud.svg" alt="cloud-image">
                 <div class="center-block text-center" style="padding-top:190px">
                     <p style="font-size: 30pt; font-family: Playwrite US Trad;">I'm Renee.</p>
                     <p style="font-size: 20pt;">a coder.</p>
                 </div>
             </div>
             <div class="home2 align-items-end d-flex">
-             <div class="col-4 text-end">
-                <img style="height: 150px;" src="images/dog.svg" alt="dog-image">
-             </div>
-             <div class="col-5 text-end">
-                <img style="height: 50px;" src="images/grass.svg" alt="dog-image">
-             </div>
+                <div class="col-4 text-end">
+                    <img style="height: 150px;" src="images/dog.svg" alt="dog-image">
+                </div>
+                <div class="col-5 text-end">
+                    <img style="height: 50px;" src="images/grass.svg" alt="dog-image">
+                </div>
             </div>
-            <div class="home3" 
-                dfadf
-               </div>
+            <div class="home3">
             </div>
+
             <div class="container">
                 <div class="row">
                     <div class="col-12">
