--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                                         <div class="card-body">
                                             <h5 class="card-title">The Home Healthcare Project (2014-2017)</h5>
                                             <p class="card-text">與學校護理系合作的居家安全訓練遊戲。我負責所有的建模和部份的程式。</p>
-                                            <a href="hhttps://vimeo.com/203766617" class="btn btn-primary">Go somewhere</a>
+                                            <a href="hhttps://vimeo.com/203766617" class="btn btn-primary">Demo</a>
                                         </div>
                                     </div>
                                 </div>
@@ -107,7 +107,7 @@
                                         <div class="card-body">
                                             <h5 class="card-title">SRanipal (2017-2020)</h5>
                                             <p class="card-text">Vive Pro的AI臉部表情識別工具，我為這個工具寫了Demo。</p>
-                                            <a href="https://www.youtube.com/watch?v=w7qciYfmbFA" class="btn btn-primary">Go somewhere</a>
+                                            <a href="https://www.youtube.com/watch?v=w7qciYfmbFA" class="btn btn-primary">Demo</a>
                                         </div>
                                     </div>
                                 </div>
@@ -117,7 +117,7 @@
                                         <div class="card-body">
                                         <h5 class="card-title">SRWorks (2017-2020)</h5>
                                         <p class="card-text">Vive Pro的AI深度與場景物件識別工具，我為這個工具寫了Demo。</p>
-                                        <a href="https://www.youtube.com/watch?v=ICEegHQcZlc&t=118s" class="btn btn-primary">Go somewhere</a>
+                                        <a href="https://www.youtube.com/watch?v=ICEegHQcZlc&t=118s" class="btn btn-primary">Demo</a>
                                         </div>
                                     </div>
                                 </div>
@@ -127,7 +127,7 @@
                                         <div class="card-body">
                                         <h5 class="card-title">WhiizU (2021-2022)</h5>
                                         <p class="card-text">健身車遊戲，我負責Shader的編寫、與Shader相關美術編輯器，偶爾支援前端介面的製作。</p>
-                                        <a href="https://www.youtube.com/watch?v=N7G_WVXvw9M&t=1s" class="btn btn-primary">Go somewhere</a>
+                                        <a href="https://www.youtube.com/watch?v=N7G_WVXvw9M&t=1s" class="btn btn-primary">Demo</a>
                                     </div>
                                 </div>
                                 </div>
@@ -136,8 +136,8 @@
                                         <img src="images/sma.jpg" class="card-img-top" alt="image of the whiizu project">
                                         <div class="card-body">
                                         <h5 class="card-title">絢花百兵帖 (2022-2024)</h5>
-                                        <p class="card-text">我第一次參與商業手遊專案。大多都在刻前端。我處理過商城金流、Bundle下載、戰鬥系統、包版上架的工作。</p>
-                                        <a href="https://www.youtube.com/watch?v=ENKU4W9-2ik" class="btn btn-primary">Go somewhere</a>
+                                        <p class="card-text">我第一次參與商業手遊專案。大多都在刻前端。我處理了商城金流、Bundle下載、戰鬥系統、以及包版上架的流程。</p>
+                                        <a href="https://www.youtube.com/watch?v=ENKU4W9-2ik" class="btn btn-primary">Demo</a>
                                         </div>
                                     </div>
                                 </div>
