--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                 </div>
             </div>
         </main>
-    <script src="index.js" />
+        <script src="index.js"></script>
     </body>
     <footer>
             <img src="images/cat.png" height="20" alt="cat image">
