--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
       
         <title>Renee Home 2024</title>
     <body>
-        <div id="cover">loading...</div>
+        <div class="cover">loading...</div>
         <span style="font-family: Playwrite US Trad;"></span>
         <main>
-            <canvas id="canvas" style="border: 1px solid black"></canvas>
+            <canvas class="canvas"></canvas>
             <div class="container">
                 <div class="row">
                     <div class="col-12">
